Fix #109130: Crash with Snap Project Individual

Caused by 3df2110abd

`dist_px` can be `nullptr`.